# riemann

./: .gitignore  Cargo.toml  LICENSE  README.md  Riemann.spec  build.sh  build_entry.py  certificate.pem  create_model_pack.sh  directory-tree.md  generate_white_icons.py  install_icon.sh  justfile  nbuild.sh  package-lock.json  package.json  pyproject.toml  requirements.sh  requirements.txt  test_runner.sh
.github/workflows/: release.yml
docs/: DevGuide.md  README.md  directory-tree.md
python-app/riemann/: __init__.py  __main__.py  app.py  riemann_core.pyi
python-app/riemann/assets/: audio_engine.js  homepage.css  homepage.html  homepage.js
python-app/riemann/assets/__tests__/: audio_engine.test.js  homepage.test.js
python-app/riemann/assets/homepage/: homepage.css  homepage.html
python-app/riemann/assets/injections/: ad_skipper.js  backspace_handler.js  emoji_fallback.js  smart_dark_mode.js
python-app/riemann/assets/theme/: modern_dark.css  modern_dark.qss  modern_light.css
python-app/riemann/core/: constants.py  managers.py
python-app/riemann/ui/: browser.py  browser_handlers.py  components.py  reader.py
python-app/riemann/ui/reader/: __init__.py  tab.py  utils.py  widgets.py  workers.py
python-app/riemann/ui/reader/mixins/: ai.py  annotations.py  metadata.py  rendering.py  search.py  signatures.py
python-app/riemann_app/: main.py
python-app/tests/: test_ai.py  test_annotations.py  test_app.py  test_browser.py  test_browser_handlers.py  test_components.py  test_constants.py  test_managers.py  test_metadata.py  test_rendering.py  test_search.py  test_signatures.py  test_tab.py  test_utils.py  test_widgets.py  test_workers.py
requirements/: requirements.in  requirements.sh  wreqs.txt  xreqs.txt
riemann-ai/: build_ai.sh  main.py  requirements.txt
riemann-ai/tests/: test_main.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs
rust-core/tests/: test_core.rs
rust-ocr-worker/: Cargo.toml
rust-ocr-worker/src/: lib.rs  main.rs
rust-ocr-worker/tests/: test_ocr.rs
scripts/: build.sh  create_model_pack.sh  generate_white_icons.py  install_icon.sh  nbuild.ps1  nbuild.sh  test_runner.sh
