[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "riemann"
version = "3.2.7"
description = "PDF reader and Web browser with integrated music mode"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5",
]

[tool.maturin]
manifest-path = "rust-core/Cargo.toml"
python-source = "python-app"

[tool.pytest.ini_options]
addopts = "--capture=fd"