[package]
name = "riemann_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "riemann_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py311"] }
# Using a newer version to fix text extraction stability
pdfium-render = "0.8.18" 
image = "0.24"
once_cell = "1.18"
anyhow = "1.0"

# Import our local OCR worker
riemann_ocr_worker = { path = "../rust-ocr-worker" }